Closed Bug 661993 Opened 14 years ago Closed 14 years ago

Forwarding emails as attachments doesn't record the message's size

Categories

(MailNews Core :: Composition, defect)

defect
Not set
normal

Tracking

(thunderbird5.0 ?)

RESOLVED FIXED
Thunderbird 7.0
Tracking Status
thunderbird5.0 --- ?

People

(Reporter: squib, Assigned: squib)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

It appears I forgot one of the places that the file size is recorded in nsIMsgAttachment. If you attempt to forward an email as an attachment, it treats it as having an unknown size; this is obviously wrong. Here's a patch with some tests. Protz, I asked you for review since I recall you being familiar with these changes. Of course, feel free to reassign if you like. Standard8, should we take this for Miramar? It's not really a regression, and probably unlikely that people will even notice (it's been many moons since the original change, and there aren't any other bugs on this).
Attachment #537285 - Flags: review?(jonathan.protzenko)
Blocks: 610964
Jim, the other day I tried to start thunderbird from the terminal: thunderbird -compose "attachment='/home/jonathan/whatever.txt'" and then the file size for the attachment wasn't shown. You might want to fix this case as well... :-)
I've filed bug 662087 for that issue. While I was searching MXR, I also happened upon bug 662088, which is just for MAPI on Windows (though I can't figure out how to make things break there; I'm just guessing it's wrong).
Blocks: 195702
Comment on attachment 537285 [details] [diff] [review] Fix this and test it Review of attachment 537285 [details] [diff] [review]: ----------------------------------------------------------------- Not much to say here, except the change seems pretty simple, so I hope we won't have any complications. As to support for drag&drop, I'll ask Andrew's opinion. Can't you just call the relevant function from MsgComposeCommands, passing it a fake drag&drop event/data? Now we have the HTML5 drag&drop stuff (which is compatible with the old API that MsgComposeCommands uses), so that should feasible to fake a drag&drop data...
Attachment #537285 - Flags: review?(jonathan.protzenko) → review+
Jim, https://bugzilla.mozilla.org/show_bug.cgi?id=515776 tells me we actually have support for drag&drop in Mozmill. What in particular prevents you from using it?
There are two problems: 1) That's only in Mozmill 1.5, and Thunderbird still runs on Mozmill 1.4.2b1 (as far as I know) 2) That only supports intra-window drag-and-drop, and I'd need to simulate drag-and-drop between different windows. I'll see if I can figure out enough about the dataTransfer object to manually inject the attachment info I want, but I'll probably do that in bug 610964.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 7.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: