Bug 661993 - Forwarding emails as attachments doesn't record the message's size; r=protz